--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,14 @@ body {
   height: 100%;
 }
 
+html {
+  font-size: 16px;
+}
+
+h1 {
+  margin: 0;
+}
+
 body {
   margin: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -23,4 +31,46 @@ body {
   flex-direction: column;
   height: 100%;
   width: 100%;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(146, 184, 253);
+}
+
+.header .auth {
+  display: flex;
+}
+
+.header .auth .link {
+  padding: 0 6px;
+}
+
+.header .auth .slash {
+  color: rgb(103, 131, 168);
+}
+
+.active {
+  color: white;
+  cursor: default;
+}
+
+.content {
+  padding: 4rem 0;
+  text-align: center;
+  color: #fff;
+  background-color: #108ee9;
+}
+
+.sign-in {
+  width: 311px;
+  height: 50px;
+  font-size: 1.5rem;
+}
+
+.footer {
+  text-align: left;
+  color: rgb(35, 43, 43);
+  background-color: rgb(255, 255, 255);
 }
