--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
   margin: 0;
 }
@@ -10,6 +6,7 @@ a {
   text-decoration: none;
   color: inherit;
   transition: color 0.3s ease;
+  font-weight: 400;
 }
 
 a:hover {
@@ -17,20 +14,18 @@ a:hover {
 }
 
 .active {
-  text-decoration: underline;
+  color: darkblue;
+  font-weight: 600;
 }
 
 .main {
+  min-height: calc(100vh - 128px);
+  background-color: #fff;
+}
+
+.main-container {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
   padding: 40px 20px;
-}
-
-.content {
-  background-color: #fff;
-}
-
-.footer {
-  text-align: center;
 }
